--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400');
+@import url('https://fonts.googleapis.com/css?family=Metal+Mania');
+
+@font-face {
+    font-family: "Booter - Zero Zero";
+    src: url("Fonts/Booter - Zero Zero.woff") format("woff"),
+         url("Fonts/Booter - Zero Zero.woff2") format("woff2");
+    font-weight: normal;
+    font-style: normal;
+}
+
 * {
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #333;
+    font-family: Raleway;
+    color: #777;
 }
 
 html, body {
@@ -20,7 +31,7 @@ html, body {
 .nav a {
     display: inline-block;
     padding: .5em;
-    color: black;
+    color: white;
     text-decoration: none;
 }
 
@@ -28,7 +39,7 @@ html, body {
     text-align:center;
     font-size:1.1em;
     font-weight:lighter;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.3);
 }
 
 .main-nav li {
@@ -36,11 +47,13 @@ html, body {
 }
 
 .nav a:hover {
-    background-color: rgba(20, 20, 255, 0.3)
+    background-color: rgba(255, 255, 255, 0.3)
 }
 
 .main-header{
-    background-image: url("Images/background1.jpg");
+    background-color: rgba(0,0,0,.6);
+    background-image: url("Images/Header Background.jpg");
+    background-blend-mode: multiply;
     background-size: cover;
     padding-bottom: 10px;
 }
@@ -49,5 +62,61 @@ html, body {
     text-align: center;
     margin:0;
     font-size: 4em;
-    font-family:'Eras Demi ITC';
+    font-family:"Booter - Zero Zero";
+    font-weight: normal;
+    color: white;
+}
+
+.name-large {
+    font-size: 9em;
+}
+
+.content-section {
+    margin: 1em;
+}
+
+.container {
+    max-width:900px;
+    margin: 0 auto;
+    padding: 0 1.5em;
+}
+
+.section-header {
+    font-family:"Metal Mania";
+    font-weight: normal;
+    color: #333;
+    text-align:center;
+    font-size: 2.5em;
+}
+.about-band-image {
+    float: left;
+    height: 200px;
+    width: 200px;
+    margin: 15px;
+    border-radius: 50%;
+}
+
+.main-footer {
+    background-color: #56CCF2;
+    color: white;
+    padding: .25em 0;
+}
+
+.main-footer-container {
+    display: flex;
+    align-items: center;
+}
+
+.main-footer-container ul {
+    flex-grow: 1;
+    text-align: end;
+}
+
+.footer-nav li {
+    padding: 0 5em;
+}
+
+.footer-nav img{
+    width: 30px;
+    height: 30px;
 }
