--- a/views/store.ejs
+++ b/views/store.ejs
@@ -30,6 +30,7 @@
                     </div>
                 </div>
                 <% }) %>
+                <!-- tällä hetkellä tyhjä sivu-->
         </section>
 
         <section class="container content-section">
